fix: persist aliases correctly (mutable list, proper String[] mapping)